Fixed Core Features section and background issues

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="w-full m-0 p-0">
   <!-- navbar -->
-  <nav class="bg-deep-blue  relative">
+  <nav class="bg-deep-blue relative">
     <!-- logo -->
     <div class=" mx-auto max-w-[1080px] flex items-center justify-between  ">
         <a href="" class="cursor-pointer py-7 pr-7"><img src="./Images/logo.svg" 
@@ -757,7 +757,7 @@
 
 
   <!-- core features -->
-  <section class="w-full mt-14  bg-[cover] z-[1000] bg-no-repeat bg-[url(/Images/core-features-sectionBg.svg)] coreFeature" >
+  <section class="w-full mt-14 bg-[cover] z-[1000] bg-no-repeat bg-[url(/Images/core-features-sectionBg.svg)] coreFeature" style="background-image: url(./Images/core-features-sectionBg.svg);">
     
     <div class=" 1 max-w-[1080px] pt-4  mx-auto h-fit">
       <h2 class="text-white font-mullish  text-2xl text-center leading-[1.2] font-extrabold">Features</h2>
@@ -928,7 +928,7 @@
   </section>
 
   <!-- CTA -->
-  <section class="w-full min-h-[510px] bg-[url(/Images/CTABg.svg)] bg-cover bg-no-repeat flex justify-center overflow-x-hidden relative ctaSection" >
+  <section class="w-full min-h-[510px] bg-cover bg-no-repeat flex justify-center overflow-x-hidden relative ctaSection" style="background-image: url(./Images/CTABg.svg);" >
     <div class="w-11/12 max-w-[1080px] flex flex-row justify-between items-center mx-auto space-x-16">
         <!-- left -->
          <div class="flex flex-col justify-center mt-4 gap-5">
